# vintage-story-ai-assistant

./: .gitignore  INSTALLATION.md  README.md  TESTING.md  gemini.md  index.html  package-lock.json  package.json  test-backend-integration.html  test-backend-integration.js  test-component-integration.html  test-error-boundary.html  test_startup.js  test_validation_integration.rs  vintage_story_ai_blueprint.md  vite.config.ts
.kiro/hooks/: agent-steering-updater.kiro.hook
.kiro/specs/critical-fixes-phase/: design.md  requirements.md  tasks.md
.kiro/specs/flaw-fixes/: 001-incomplete-rag-implementation.md  002-missing-embedding-model.md  003-improve-error-handling.md  004-complete-frontend-integration.md  005-configuration-management.md  006-fix-database-lock-issues.md  007-comprehensive-testing.md  008-remove-hardcoded-values.md  009-improve-user-feedback.md  010-fix-state-management.md  README.md
.kiro/specs/github-mcp-server-fix/: requirements.md
.kiro/steering/: implementation-plan.md  implementation_plan_2.md  product.md  structure.md  tech.md
src/: App.tsx  styles.css  test-integration.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  errors.rs  main.rs
src-tauri/src/commands/: chat.rs  mod.rs  ollama.rs  system.rs  validation.rs  wiki.rs
src-tauri/src/services/: chat_service.rs  embedding_service.rs  embedding_service_test.rs  mod.rs  ollama_manager.rs  ollama_manager_test.rs  rag_integration_test.rs  vector_database.rs  vector_database_test.rs  wiki_service.rs
src/components/: ChatHistory.tsx  ErrorBoundary.tsx  ErrorTester.tsx  MessageRenderer.tsx  Settings.tsx
