[package]
name = "vintage-story-ai-assistant"
version = "0.1.0"
description = "Local AI Assistant for Vintage Story"
authors = ["Topher"]
repository = ""
edition = "2021"

# Optimize for smaller binary size
[profile.release]
opt-level = "s"  # Optimize for size
lto = true
codegen-units = 1
panic = "abort"
strip = true

[build-dependencies]
tauri-build = { version = "2.1", features = [] }

[dependencies]
# Tauri framework
tauri = { version = "2.1", features = ["devtools"] }
tauri-plugin-fs = "2.1"
tauri-plugin-shell = "2.1"
tauri-plugin-http = "2.1"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client for Ollama API and wiki scraping
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# HTML parsing for wiki scraping
scraper = "0.20"
regex = "1.10"

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Embedded database for vector storage
sled = "0.34"
bincode = "1.3"

# Embedding and text processing (placeholder for now)
# candle-core = "0.8"
# candle-nn = "0.8"
# candle-transformers = "0.8"
# tokenizers = "0.20"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Configuration management
config = "0.14"

# File system operations
dirs = "6.0"

# Progress tracking
indicatif = "0.17"

# Async utilities
futures = "0.3"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
# Testing utilities
mockito = "1.2"
tokio-test = "0.4"
